Closed
Bug 1479866
Opened 7 years ago
Closed 7 years ago
document.createXULElement crashes when called on a document that does not support XUL
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox63 | --- | fixed |
People
(Reporter: mossop, Assigned: mossop)
References
Details
Attachments
(1 file)
It should throw an exception instead...
Assignee | ||
Comment 1•7 years ago
|
||
Feel free to suggest a better error result for this case.
Comment 2•7 years ago
|
||
Comment on attachment 8996412 [details]
Bug 1479866: Throw an exception if XUL elements cannot be created.
Boris Zbarsky [:bz] (no decent commit message means r-) has approved the revision.
https://phabricator.services.mozilla.com/D2576
Attachment #8996412 -
Flags: review+
Pushed by dtownsend@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/16f86c028101
Throw an exception if XUL elements cannot be created. r=bzbarsky
Comment 4•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•