Bug 1479866: Throw an exception if XUL elements cannot be created. r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D2576

--HG--
extra : moz-landing-system : lando